# Sanguine

./: .env.default  .gitignore  AGENTS.md  LICENSE.md  README.md  data-model-notes.md  docker-compose.dev.yml  docker-compose.devcontainer.yml  docker-compose.yml  package-lock.json  package.json  server-nginx.conf
backend/: .dockerignore  .env  .env.default  .gitignore  ANESTH_LOOKUP_040422.csv  Dockerfile  Pipfile  README.md  SURGEON_LOOKUP_040422.csv  app.py  cpt-code-mapping.csv  cpt_codes.csv  cpt_codes_cleaned.csv  cpt_codes_cleaned_RM_reviewed_final.csv  cpt_codes_manual.csv  cpt_codes_oracle.csv  cpt_generation.py  database.mwb  docker-compose.yml  entrypoint.sh  hemo.sql  provider-department-mapping.csv  provider_department_mapping.csv  pyproject.toml
backend/api/: AP.sql  asgi.py  auth.py  cpt_codes_cleaned.csv  data_dictionary.csv  middleware.py  models.py  routers.py  saml.py  settings.py  settings_prod.py  test_settings.py  urls.py  utils.py  views.py  wsgi.py
backend/api/api/: auth_views.py  data_dictionary.csv  decorators.py  models.py  settings.py  settings_prod.py  tests.py  urls.py  utils.py  views.py  wsgi.py
backend/api/migrations/: 0001_initial.py  0002_add_provider_department_and_roomtrace_index.py  0002_guidelineadherence_visitattributes.py  0002_manual_view.py  0002_providerdepartmentmapping.py  0002_state_name.py  0003_auto_20200826_1855.py  0003_dataexclusion.py  0003_manual_view.py  0004_billingcode_cpt_visit_idx.py  0004_delete_guidelineadherence.py  0004_surgery_case_view.py  (+9 more)
backend/utah-schema/: column_names_live.csv  generate_models.py
(+526 files in other folders)
