[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jack Wilburn <jackwilburn@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
coverage = "^7.4.0"
mysqlclient = "^2.2.1"
django-cas-ng = "==4.1.1"
django = "~3.2.24"
oracledb = "^2.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
