[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jack Wilburn <jackwilburn@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mysqlclient = "^2.2.1"
django-cas-ng = "==5.0.1"
django = "~5.0"
oracledb = "^2.0.1"
django-extensions = "^3.2.3"
pygraphviz = "^1.12"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
